# sqlalchemy-crud-tx

./: CHANGELOG.md  README.md  README_zh.md  crud_service_current.py  crud_service_deprecated.py  pyproject.toml
.github/workflows/: auto-tag-version.yml  publish-pypi.yml
benchmarks/: README.md  conftest.py  test_crud_vs_sqlalchemy_benchmark.py
docs/: crud_refactor_todo.md  todo.md
docs/examples/: basic_crud.py
src/flask_sqlalchemy_crud/: __init__.py  core.py  crud.py  query.py  transaction.py  types.py
src/flask_sqlalchemy_crud.egg-info/: PKG-INFO  SOURCES.txt
src/sqlalchemy_crud_tx/: __init__.py  core.py  crud.py  pagination.py  query.py  transaction.py  types.py
tests/: conftest.py  test_crud_integration.py  test_crud_misuse_examples.py  test_sqlalchemy_integration.py
