[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-sqlalchemy-crud"
version = "0.1.0"
description = "A typed CRUD helper for Flask-SQLAlchemy with transaction scopes."
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["flask-sqlalchemy>=3.0", "sqlalchemy>=1.4"]

[project.urls]
Homepage = "https://example.com/your-project-homepage"

[tool.setuptools.packages.find]
where = ["src"]

